# algorithmic_patterns

./: Makefile  README.md  pyproject.toml
basic_algorithms/: README.md  search.py  sort.py
data_structures/: README.md  linked_list.py
data_structures/linked_lists/: __init__.py
data_structures/linked_lists/base/: __init__.py  abstract_list_model.py
data_structures/linked_lists/lists/: __init__.py  doubly_linked_list.py  singly_linked_list.py
data_structures/linked_lists/nodes/: __init__.py  doubly.py  singly.py
data_structures/linked_lists/utils/: __init__.py  print_linked_list.py
design_gurus/: README.md
design_gurus/cyclic_sort/easy/: cyclic_sort.py  find_all_duplicate_nums.py  find_all_missing_numbers.py  find_the_corrupt_pair.py  find_the_duplicate_number.py  find_the_missing_number.py
design_gurus/fast_and_slow_pointers/easy/: linked_list_cycle.py  middle_of_the_linked_list.py
design_gurus/fast_and_slow_pointers/medium/: happy_number.py  palindrome_linked_list.py  rearrange_linked_list.py  start_of_linked_list_cycle.py
design_gurus/in_place_reverse_linked_list/easy/: reverse_linked_list.py
design_gurus/in_place_reverse_linked_list/medium/: reverse_sub_list.py
design_gurus/merge_intervals/medium/: conflicting_appointments.py  insert_interval.py  intervals_intersection.py  merge_intervals.py
design_gurus/sliding_window/easy/: max_sum_subarray_of_size_k.py  smalles_subarray_with_greater_sum.py
design_gurus/sliding_window/medium/: fruits_into_baskets.py  longest_substring_with_k_distinct_chars.py
design_gurus/tests/: test_foo.py  test_two_pointers.py
design_gurus/two_pointers/: squaring_sorted_array.py
design_gurus/two_pointers/easy/: find_non_duplicate_nums_insances.py  pair_with_target_sum.py
design_gurus/two_pointers/medium/: comparing_strings_containing_bacspaces.py  dutch_national_flag_problem.py  minimum_window_sort.py  quadruple_sum_to_target.py  subarrays_with_product_less_than_target.py  triplet_sum_close_target.py  triplet_sum_zero.py  triplets_with_smaller_sum.py
design_gurus/warmup/easy/: contains_duplicate.py  number_of_good_pairs.py  pangram.py  reverse_vowels.py  shortest_word_distance.py  valid_anagram.py  valid_palindrome.py
design_gurus/warmup/medium/: sqrt.py
tests/tests_data_structures/tests_linked_lists/: test_singly_linked_list.py
