[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Patterns of algorithmic problems"
authors = ["Shoxrux Yuldashov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.3.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

max-complexity = 10
per-file-ignores = { "__init__.py" = "F401" }

[tool.flake8]
line-length = 79
extend-ignore = ["E203"]
exclude = [
    ".git",
    "*/__pycache__/",
    "*/env",
    "*/.env",
    "*/venv",
    "*/.venv",
    "tests/",
    ".pytest_cache",
    ".vscode",
    ".idea"
]

[tool.flake8.ignore]
W503 = true
F811 = true
R503 = true
R504 = true
R505 = true

[tool.black]
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
/(
  | __pycache__
  | .pytest_cache
  | .vscode
  | .idea
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
