[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Patterns of algorithmic problems"
authors = ["Shoxrux Yuldashov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "5.13.2"
pylint = "3.3.0"
mypy = "1.11.2"
flake8 = "7.1.1"

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
faker = "28.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
line-length = 79
max-complexity = 6
per-file-ignores = "__init__.py:F401"
extend-ignore = ["E203", "F403", "F401"]
exclude = [
    ".git/",
    "__pycache__/",
    "**/migrations/",
    "manage.py",
    "**settings/*.py",
    "env/",
    "venv/",
    ".env/",
    ".venv/",
    "tests/",
    ".pytest_cache",
    ".vscode/",
    ".idea/"
]

[tool.flake8.ignore]
W503 = true
F811 = true
R503 = true
R504 = true
R505 = true

[tool.black]
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
/(
  | __pycache__
  | .pytest_cache
  | .vscode
  | .idea
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = [
    "basic_algorithms",
    "data_structures",
    "design_gurus",
]
